manifests/jellyfin.yaml
# TODO setup healthcheck
# TODO setup SSL cert and https port
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-udp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin # # < annotation name to combine the Service IP, make sure it's same name as in the service UDP yaml
spec:
  ports:
  - port: 1900             # < port to open on the outside on the server
    targetPort: 1900       # < targetport. port on the pod to passthrough
    name: dlna-udp         # < reference name for the port in the deployment yaml
    protocol: UDP
  - port: 7359
    targetPort: 7359
    name: discovery-udp
    protocol: UDP
  # sessionAffinity: ClientIP # This is necessary for multi-replica deployments
  selector:
    app: jellyfin
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tcp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin # # < annotation name to combine the Service IP, make sure it's same name as in the service UDP yaml
  labels:
    app: jellyfin
spec:
  ports:
  - name: 8096-8096
    nodePort: 30096
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: NodePort
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /jellyfin
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1 # TODO get this working with 3 replicas, probably by running on a single agent
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      # TODO Fails to decode to Go struct, need to troubleshoot
      # affinity:
        # nodeAffinity:
          # - matchExpressions:
              # - key: app
                # operator: In
                # values:
                  # - "compute"
      containers:
      - name: liveness
        image: longhornio/livenessprobe:v2.9.0-arm64
        args:
        - /server
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 120
          periodSeconds: 3

      - env:
        - name: JELLYFIN_PublishedServerUrl
          value: http://rpi4:8096
        image: docker.io/jellyfin/jellyfin:latest
        name: jellyfin
        ports:
        - containerPort: 8096
          # hostPort: 8096
        # Need to setup TLS for this
        # - containerPort: 8920
          # hostPort: 8920
        securityContext:
          privileged: true
          capabilities:
            drop:
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - name: media
          mountPath: /media
        # - name: cache
          # mountPath: /cache
        - name: conf
          mountPath: /config
        - name: dev-dri
          mountPath: /dev/dri/renderD128 # Raspberry pi 4 VC4 video card
      enableServiceLinks: false
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: conf
        persistentVolumeClaim:
          claimName: jellyfin-conf-pvc
      # - name: cache
        # emptyDir:
          # sizeLimit: 1Gi
      - name: dev-dri
        hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
      dnsPolicy: ClusterFirst
      restartPolicy: Always
