manifests/pihole.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-admin-web
  selector:
    app: pihole
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-udp
spec:
  ports:
  - name: 32053-32053-udp
    nodePort: 30000
    port: 53
    protocol: UDP
    targetPort: 32000
  selector:
    app: pihole
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        namespace: pihole
      name: pihole
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - compute
      automountServiceAccountToken: false
      containers:
      - env:
        - name: PROXY_LOCATION
          value: pihole.rick.expresso.lan
        - name: VIRTUAL_HOST
          value: pihole.rick.expresso.lan
        - name: ServerIP
          value: 10.50.0.2
        - name: TZ
          value: America/New_York
        - name: DNSMASQ_LISTENING
          value: all
        - name: FTLCONF_LOCAL_IPV4
          value: 10.50.0.2
        - name: PIHOLE_DNS_
          value: 8.8.8.8;4.4.4.4
        - name: DHCP_ACTIVE
          value: "false"
        - name: TEMPERATUREUNIT
          value: f
        - name: WEBTHEME
          value: default-darker
        - name: WEB_PORT
          value: "80"
        - name: WEBPASSWORD_FILE
          value: /etc/webpassword
        image: docker.io/pihole/pihole:dev
        imagePullPolicy: IfNotPresent
        name: pihole
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 80
          name: http-admin-web
          protocol: TCP
        resources:
          limits:
            cpu: 5000m
            memory: 150Mi
          requests:
            cpu: 500m
            memory: 100Mi
        securityContext:
          capabilities:
            drop:
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - mountPath: /etc/webpassword
          name: webpassword
          readOnly: true
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 1.1.1.1
      dnsPolicy: None
      enableServiceLinks: false
      hostname: pihole
      restartPolicy: Always
      volumes:
      - name: webpassword
        secret:
          defaultMode: 256
          optional: false
          secretName: webpassword
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  rules:
  - host: pihole.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 80
        path: /
        pathType: Prefix
