manifests/rtsp-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rtsp-server
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: system-cluster-critical
  labels:
    app: rtsp-server-0
    camera: "0"
  name: rtsp-server-0-http
  namespace: rtsp-server
spec:
  ports:
  - exposedPort: 80
    name: rtsp-http
    port: 8844
    protocol: TCP
    targetPort: rtsp-http
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: system-cluster-critical
  labels:
    app: rtsp-server-0
    camera: "0"
  name: rtsp-server-0-tcp
  namespace: rtsp-server
spec:
  ports:
  - name: rtsp-tcp
    port: 8554
    protocol: TCP
    targetPort: rtsp-tcp
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: system-cluster-critical
  labels:
    app: rtsp-server-0
    camera: "0"
  name: rtsp-server-0-udp
  namespace: rtsp-server
spec:
  ports:
  - name: rtsp-udp
    port: 8554
    protocol: UDP
    targetPort: rtsp-udp
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rtsp-server-0
    camera: "0"
  name: rtsp-server-0
  namespace: rtsp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtsp-server-0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rtsp-server-0
      name: rtsp-server-0
      namespace: rtsp-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: camera
                operator: In
                values:
                - "0"
      containers:
      - args:
        - -G 3264x2448x30
        - -S
        - "1"
        - -p
        - "8844"
        - -v
        - -u
        - ""
        - /dev/video0,/dev/video0
        image: mpromonet/v4l2rtspserver:latest-arm64
        livenessProbe:
          initialDelaySeconds: 120
          tcpSocket:
            port: rtsp-tcp
        name: camera-0
        ports:
        - containerPort: 8554
          name: rtsp-udp
          protocol: UDP
        - containerPort: 8554
          name: rtsp-tcp
          protocol: TCP
        - containerPort: 8844
          name: rtsp-http
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev/snd
          name: snd0
        - mountPath: /etc/rtsp/.user
          name: password
          subPath: password
        - mountPath: /dev/video0
          name: video0
        - mountPath: /dev/video1
          name: video1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /dev/video0
          type: CharDevice
        name: video0
      - hostPath:
          path: /dev/video1
          type: CharDevice
        name: video1
      - hostPath:
          path: /dev/snd
          type: Directory
        name: snd0
      - name: password
        secret:
          defaultMode: 256
          optional: true
          secretName: password-rtsp-0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: rtsp-server-0
  name: rtsp-server-0-http
  namespace: rtsp-server
spec:
  rules:
  - host: cam0.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: rtsp-server-0-http
            port:
              name: rtsp-http
        path: /mpd
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: rtsp-server-0
  name: rtsp-server-0-tcp
  namespace: rtsp-server
spec:
  rules:
  - host: cam0.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: rtsp-server-0-tcp
            port:
              name: rtsp-tcp
        path: /
        pathType: Prefix
